--- a/app/views/shared/_devisemes.html.erb
+++ b/app/views/shared/_devisemes.html.erb
@@ -1,6 +1,6 @@
-<% if user.errors.any? %>
+<% if @user.errors.any? %>
   <script type="text/javascript">
-    <% user.errors.full_messages.each do |value| %>
+    <% @user.errors.full_messages.each do |value| %>
       toastr.error('<%= value %>')
     <% end %>
   </script>
