--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,10 +13,11 @@
           <hr>
 
           <%= form_with(model: @user, local: true) do |f| %>
-            <%# <%= render 'shared/devisemes' %> %>
+            <%= render 'shared/devisemes' %>
 
             <div class="form-group">
               <%= f.text_field :name, autofocus: true, placeholder: "Your name", class: "form-control" %>
+              
             </div>
 
             <div class="form-group">
@@ -42,7 +43,7 @@
         </div>
 
         <div class="redirect-links box">
-          <%# <%= render "devise/shared/links" %> %>
+          <%= render "links" %>
         </div>
       </div>
     </div>
