--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
         <%= form_for @post, :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"} do |f| %>
           <div class="form-group row mt-2">
             <div class="col-auto pr-0">
-              <%# <%= image_tag avatar_url(current_user), class: "post-author-icon" %> %>
+              <%= image_tag avatar_url(current_user), class: "post-author-icon" %>
             </div>
             <div class="col pl-0">
               <%= f.text_field :content, class: "form-control border-0",
@@ -29,10 +29,11 @@
       </div>
     </div>
 
-    <!-- <div id="posts">
-      <%# <%= render 'posts_list' %> %>
-    </div> -->
+     <div id="posts">
+      <%= render 'posts_list' %>
+    </div> 
   </div>
   <br>
+
   <%= will_paginate @posts %>
 </div>
