--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,9 @@
           <a class="nav-link core-sprite notification-icon hide-text" href="#">Notification</a>
         </li>
         <li class="nav-item">
-          <%# <%= link_to "Profile", user_path(current_user), class: "nav-link core-sprite profile-icon hide-text" %> %>
+          <% if logged_in? %>
+          <%= link_to "Profile", user_path(current_user), class: "nav-link core-sprite profile-icon hide-text" %>
+          <% end %>
         </li>
       </ul>
     </div>
