--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="list-group text-center">
               <a href="#" class="list-group-item list-group-item-action">Change Password</a>
-              <%= link_to "Log out", destroy_session_path, method: :delete,
+              <%= link_to "Log out", session_path(current_user.id), method: :delete,
                 class: "list-group-item list-group-item-action" %>
               <a href="#" class="list-group-item list-group-item-action" data-dismiss="modal">Cancel</a>
             </div>
