--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,33 +5,37 @@
         Create Post
       </div>
       <div class="card-body">
-        <%= form_for @post, :html => {:multipart => true, :class => "dropzone upload-images p-0 border-0"} do |f| %>
-          <div class="form-group row mt-2">
-            <div class="col-auto pr-0">
-              <%= image_tag avatar_url(current_user), class: "post-author-icon" %>
-            </div>
-            <div class="col pl-0">
-              <%= f.text_field :content, class: "form-control border-0",
-                placeholder: "Say something about this ..." %>
-            </div>
+        <%= form_with(model: @post, local: true ,url: choose_new_or_edit, :html => {:multipart => true,:class => "dropzone upload-images p-0 border-0"} )  do |f| %>
+        <div class="form-group row mt-2">
+          <div class="col-auto pr-0">
+            <%= image_tag avatar_url(current_user) %>
           </div>
-          <div class="fallback">
-            <%= file_field_tag "images[]", type: :file, multiple: true %>
+          <div class="col pl-0">
+            <%= f.text_field :content, class: "form-control border-0",
+            placeholder: "Say something about this ..." %>
+            <%= f.hidden_field :user_id ,value: current_user.id  %>
           </div>
-          <div class="dz-message m-0"></div>
-          <div class="dropzone-previews mb-3">
-            <div class="upload-photos-icon">
-              <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2"></i>
-            </div>
+        </div>
+        <div class="fallback">
+          <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+          <%= file_field_tag "images[]", type: :file, multiple: true %>
+          <%= f.file_field :image , class: "post-author-icon" %>
+          <%= f.hidden_field :image_cache %>
+        </div>
+        <div class="dz-message m-0"></div>
+        <div class="dropzone-previews mb-3">
+          <div class="upload-photos-icon">
+            <i class="fa fa-plus fa-2x" aria-hidden="true" style="color:#dddfe2"></i>
           </div>
-          <%= f.submit "Post", class: "btn btn-primary" %>
+        </div>
+        <%= f.submit "Post", class: "btn btn-primary" %>
         <% end %>
       </div>
     </div>
 
-     <div id="posts">
+    <div id="posts">
       <%= render 'posts_list' %>
-    </div> 
+    </div>
   </div>
   <br>
 
